@@ -4,7 +4,7 @@ Title: Infrastructure for seriation
 Author: Michael Hahsler, Christian Buchta and Kurt Hornik 
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>
 Version: 1.0-10
-Date: 2012-xx-xx
+Date: 2013-02-15
 Description: Infrastructure for seriation with an implementation of several
     seriation/sequencing techniques to reorder matrices, dissimilarity
     matrices, and dendrograms. Also contains some visualizations techniques
